# public.ai.c_training

./: .gitignore  README.md  Readme.md  app.py  conda.yaml
mlflow/: CMakeLists.txt  MLproject  Readme.md  call.bat  call.cpp  conda.yaml  train.py
pybind11/: CMakeLists.txt  README.md  main.cpp  requirements.txt  training.py
server/: CMakeLists.txt  README.md  app.py  train.py
